--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "server:start": "node server/index.js",
+    "server:dev": "node --watch server/index.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@google/genai": "^1.17.0",
     "@hookform/resolvers": "^4.1.3",
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
+    "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.2",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.10",
     "input-otp": "^1.4.2",
