Update project configuration and dependencies
- Updated .gitignore, README.md, and ESLint configuration
- Updated package dependencies in package.json and lock files
- Modified React components and API utilities
- Updated theme settings

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,10 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-\.env
+.env
 *.local
+AGENTS.md
+CLAUDE.md
 
 # Editor directories and files
 .vscode/*
