--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
+    "eslint-plugin-react-dom": "^1.53.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-react-x": "^1.53.0",
     "globals": "^15.15.0",
     "prettier": "3.5.3",
     "tailwindcss": "^4.0.9",
